--- a/MyProject/Hospital/index.html
+++ b/MyProject/Hospital/index.html
@@ -97,68 +97,65 @@
     </section>
 
      <section id="facilities">
-      <div class="container px-4 py-5" id="icon-grid">
-        <h2 class="pb-2 border-bottom">Facilities</h2>
-    
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
-          <div class="col d-flex align-items-start">
-            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#bootstrap"></use></svg>
-            <div>
-              <h3 class="fw-bold mb-0 fs-4">Emergency Rooms</h3>
-              <p>We provide ready to use rooms for patients that need immediate operation.</p>
-            </div>
-          </div>
-          <div class="col d-flex align-items-start">
-            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#cpu-fill"></use></svg>
-            <div>
-              <h3 class="fw-bold mb-0 fs-4">Inpatient Ward</h3>
-              <p>These rooms are for patients that need under supervision.</p>
-            </div>
-          </div>
-          <div class="col d-flex align-items-start">
-            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#calendar3"></use></svg>
-            <div>
-              <h3 class="fw-bold mb-0 fs-4">Operating Room</h3>
-              <p>Our Hospital is ready for surgical equipments for the surgical operations.</p>
-            </div>
-          </div>
-          <div class="col d-flex align-items-start">
-            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#home"></use></svg>
-            <div>
-              <h3 class="fw-bold mb-0 fs-4">Delivery Room</h3>
-              <p>Special rooms for newborn babies are offered in the Delivery Room.</p>
-            </div>
-          </div>
-          <div class="col d-flex align-items-start">
-            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#speedometer2"></use></svg>
-            <div>
-              <h3 class="fw-bold mb-0 fs-4">Pharmacy</h3>
-              <p>We offer different kinds of drugs and medicines for our patients.</p>
-            </div>
-          </div>
-          <div class="col d-flex align-items-start">
-            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#toggles2"></use></svg>
-            <div>
-              <h3 class="fw-bold mb-0 fs-4">Out Patient Clinic</h3>
-              <p>We provide medical treatment and diagnosis for our patients.</p>
-            </div>
-          </div>
-          <div class="col d-flex align-items-start">
-            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#geo-fill"></use></svg>
-            <div>
-              <h3 class="fw-bold mb-0 fs-4">Dental Clinic</h3>
-              <p>We give oral health treatment and dental procedures. We have a complete dental tools and equipments.</p>
-            </div>
-          </div>
-          <div class="col d-flex align-items-start">
-            <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#tools"></use></svg>
-            <div>
-              <h3 class="fw-bold mb-0 fs-4">Blood Station</h3>
-              <p>This is where we store all type of blood. This is also the facility where we provide blood donations.</p>
-            </div>
-          </div>
+      <!-- Service 1 - Bootstrap Brain Component -->
+<section class="py-5 py-xl-8">
+  <div class="container">
+    <div class="row justify-content-md-center">
+      <div class="col-12 col-md-10 col-lg-8 col-xl-7 col-xxl-6">
+        <h2 class="mb-4 display-3 text-center fw-bold">Facilities</h2>
+        <p class="text-secondary mb-5 text-center">Our Facilities have the most advanced new equipments in the country.</p>
+        <hr class="w-50 mx-auto mb-5 mb-xl-9 border-dark-subtle">
+      </div>
+    </div>
+  </div>
+
+  <div class="container overflow-hidden">
+    <div class="row gy-5 py-5">
+      <div class="col-12 col-sm-6 col-lg-4">
+        <div class="text-center px-xl-2">
+          <i class="fa-solid fa-kit-medical fa-2xl"></i>
+          <h5 class="m-2">Emergency Rooms</h5>
+          <p class="m-0 text-secondary">We provide ready to use rooms for patients that need immediate operation.</p>
         </div>
       </div>
+      <div class="col-12 col-sm-6 col-lg-4">
+        <div class="text-center px-xl-2">
+          <i class="fa-solid fa-bed fa-2xl"></i>
+          <h5 class="m-2">Inpatient Ward</h5>
+          <p class="m-0 text-secondary">These rooms are for patients that need under supervision.</p>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-lg-4">
+        <div class="text-center px-xl-2">
+          <i class="fa-solid fa-user-doctor fa-2xl"></i>
+          <h5 class="m-2">Operating Room</h5>
+          <p class="m-0 text-secondary">Our Hospital is ready for surgical equipments for the surgical operations.</p>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-lg-4">
+        <div class="text-center px-xl-2">
+          <i class="fa-solid fa-user-nurse fa-2xl"></i>
+          <h5 class="m-2">Delivery Room</h5>
+          <p class="m-0 text-secondary">Special rooms for newborn babies are offered in the Delivery Room.</p>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-lg-4">
+        <div class="text-center px-xl-2">
+          <i class="fa-sharp fa-solid fa-prescription fa-2xl"></i>
+          <h5 class="m-2">Pharmacy</h5>
+          <p class="m-0 text-secondary">We offer different kinds of drugs and medicines for our patients.</p>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-lg-4">
+        <div class="text-center px-xl-2">
+          <i class="fa-solid fa-house-chimney-medical fa-2xl"></i>
+          <h5 class="m-2">Out Patient Clinic</h5>
+          <p class="m-0 text-secondary">We provide medical treatment and diagnosis for our patients.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
     </section>
 
     <div class="container">
