--- a/MyProject/Hospital/index.html
+++ b/MyProject/Hospital/index.html
@@ -46,7 +46,7 @@
           </div>
           <div class="col-lg-6">
             <h1 class="display-5 fw-bold lh-1 mb-3">Better Healthcare for you</h1>
-            <p class="lead">Welcome to EastMed. We provide the best health care services for you. We have the best medical equipments that we provide for our patients. We are the most affordable hospital in the country.</p>
+            <p class="lead">Welcome to EastMed. We always choose the good equipment for every procedure to maintain the safety of patients especially to avoid the transmission of diseases.</p>
           </div>
         </div>
       </div>
