--- a/MyProject/School/index.html
+++ b/MyProject/School/index.html
@@ -234,12 +234,12 @@
 </div>
 
 <div class="container">
-<footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 pt-5 mt-5 border-top">
+<footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 pt-5 border-top">
   <div class="col mb-3">
     <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
       <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
     </a>
-    <p class="text-white">© 2023</p>
+    <p class="text-white">© 2023 <span class="text-warning">School</span> Academy Inc.</p>
   </div>
 
   <div class="col mb-3">
@@ -247,35 +247,30 @@
   </div>
 
   <div class="col mb-3 py-0">
-    <h5 class="text-white">Section</h5>
+    <h5 class="text-white">About Shool Academy</h5>
     <ul class="nav flex-column">
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Home</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Features</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Pricing</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">FAQs</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">About</a></li>
+      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">About Us</a></li>
+      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Board of Directors</a></li>
+      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Hymn and Logo</a></li>
+      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Mission and Vision</a></li>
+      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Office Directory</a></li>
     </ul>
   </div>
 
   <div class="col mb-3">
-    <h5 class="text-white">Section</h5>
+    <h5 class="text-white">Online Services</h5>
     <ul class="nav flex-column">
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Home</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Features</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Pricing</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">FAQs</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">About</a></li>
+      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Admission Requirements</a></li>
+      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">School Portal</a></li>
+      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Online Learning</a></li>
     </ul>
   </div>
 
   <div class="col mb-3">
-    <h5 class="text-white">Section</h5>
+    <h5 class="text-white">Downloads</h5>
     <ul class="nav flex-column">
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Home</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Features</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Pricing</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">FAQs</a></li>
-      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">About</a></li>
+      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Forms</a></li>
+      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Flyers</a></li>
     </ul>
   </div>
 </footer>
