--- a/MyProject/School/index.html
+++ b/MyProject/School/index.html
@@ -227,7 +227,7 @@
   </div>
   
   <div class="col-lg py-5">
-    <p class="text-white fw-bold"><i class="fa-solid fa-users fa-2xl" style="color: #ffffff;"></i> Parters</p>
+    <p class="text-white fw-bold"><i class="fa-solid fa-users fa-2xl" style="color: #ffffff;"></i> Partners</p>
     <img src="pics4.jpg" class="img-fluid rounded border-5 border border-warning" alt="Responsive image">
   </div>
   
